--- a/src/CryptoKey_Login.form
+++ b/src/CryptoKey_Login.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="800" height="400"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="e5627" class="javax.swing.JButton" binding="registerButton" default-binding="true">
