--- a/src/CryptoKey_QRCode.form
+++ b/src/CryptoKey_QRCode.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="422"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="800" height="500"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="bb1f1" class="javax.swing.JTextArea" binding="pleaseScanThisQRCodeTextArea" default-binding="true">
@@ -34,7 +36,9 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <columns value="0"/>
+        </properties>
       </component>
       <component id="606a9" class="javax.swing.JButton" binding="continueButton" default-binding="true">
         <constraints>
