--- a/src/CryptoKey_TOTP.form
+++ b/src/CryptoKey_TOTP.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="250" height="124"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="3353d" class="javax.swing.JTextField" binding="textField1" default-binding="true">
