--- a/src/CryptoKey_Home.form
+++ b/src/CryptoKey_Home.form
@@ -39,12 +39,12 @@
           <model/>
         </properties>
       </component>
-      <component id="d0e46" class="javax.swing.JButton" binding="addButton" default-binding="true">
+      <component id="d0e46" class="javax.swing.JButton" binding="removeButton">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add"/>
+          <text value="Remove"/>
         </properties>
       </component>
     </children>
